--- a/assets/css/pokedex-stats.css
+++ b/assets/css/pokedex-stats.css
@@ -72,7 +72,7 @@
 }
 
 .pokemon-stats {
-    backgroound-color: #fff;
+    background-color: #fff;
     margin-top: 2rem;
     color: #4e4d4d;
     border-radius: .5rem;
@@ -99,3 +99,45 @@ li {
     border-bottom: 3px solid #BCC2E8;
 }
 
+.active {
+    border-bottom: 3px solid #BCC2E8;
+}
+
+table {
+    padding: 1rem;
+    line-height: 1.8rem;
+}
+
+table .item {
+    width: 120px;
+}
+
+table .description {
+    color: #000;
+}
+
+table th {
+    padding: 20px 0 10px 0;
+    text-align: left;
+    color: #000;
+}
+
+table .gender {
+    display: flex;
+    align-items: center;
+}
+
+table .material-symbols-outlined {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.male {
+    color: #BCC2E8;
+    padding-right: 5px;
+}
+
+.female {
+    color: #EFB4CB;
+    padding-right: 0 5px 0 10px;
+}
